<resources>
    <string name="app_name">Weather</string>
    <string name="weather_api">https://api.openweathermap.org/data/2.5/weather?q={city name}&amp;appid={7465cd2201320080ec76abc3b7bb945d}</string>
    <string name="bishkek">Bishkek</string>
    <string name="key">7465cd2201320080ec76abc3b7bb945d</string>
    <string name="Plus">+</string>
    <string name="settings">*</string>
    <string name="_10c">10C</string>
    <string name="weather">Weather</string>
    <string name="kara_balta">Kara-Balta</string>
    <string name="city">City</string>
    <string name="windspeed">WindSpeed</string>
    <string name="karabalta">KARA-BALTA</string>
    <string name="plus">+</string>
    <string name="choose_other_city">choose other city</string>
    <string name="windSpeed">Скорость ветра</string>
    <string name="airHumidity">Влажность воздуха</string>
    <string name="feelsLike">Ощущается как</string>
    <string name="back_to_my_city">back to my city</string>
    <string name="show_other_city">show other city</string>
    <string name="evening">Evening</string>
    <string name="morning">Morning</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="humidity">Humidity</string>
    <string name="feels_like">Feels Like</string>
    <string name="celsius">celsius</string>
    <string name="five_days_weather">Five days weather</string>
</resources>