<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="15dp"
    android:layout_margin="2dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textViewMorning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/morning"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewMorningTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textViewEvening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evening"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewEveningTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/windSpeedName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/windSpeedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/airHumidityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/airHumidityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/feelsLikeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feels_like"
            android:textColor="@color/black"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/feelsLikeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"/>
    </LinearLayout>


</androidx.cardview.widget.CardView>